@@ -2,6 +2,8 @@ Cascading Change Log
 
 unreleased (wip 1.1)
 
+  Added c.f.FlowProcess#setStatus method to allow for text status messages to be posted.
+
   Added c.o.a.AssertNotEquals assertion type.
 
   Removed planner restriction that traps must not cross map/reduce boundaries. This allows for a single c.t.Tap
